--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
     "no-extra-semi": "error",
     "quotes": ["error", "single"],
     "indent": ["error", 2],
-    "comma-dangle": ["error", "never"]
+    "comma-dangle": ["error", "never"],
+    "jsx-quotes": ["error", "prefer-single"]
   }
 }
