--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "axios": "^1.2.3",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
+    "markdown-it": "^13.0.1",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/markdown-it": "^12.2.3",
     "sass": "^1.57.1"
   }
 }
