--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "axios": "^1.2.3",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
+    "highlight.js": "^11.7.0",
     "markdown-it": "^13.0.1",
+    "markdown-it-anchor": "^8.6.6",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
